# PPT-Design-Skill

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SKILL.md  build_creative_v3.pptx  build_cyberpunk_v3.pptx  build_mckinsey_v3.pptx  creative.pptx  cyberpunk.pptx  eval_result.txt  generate_examples.py  install.py  mckinsey.pptx  presentation_20260724_081240.pptx  pyproject.toml  skill.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/ppt-design-skill/: AGENTS.md  SKILL.md  pyproject.toml
.claude/skills/ppt-design-skill/docs/: README_EN.md  component_library_integration_design.md  enterprise-pipeline-review.md  usage-guide.md  v0.4-requirements.md
.claude/skills/ppt-design-skill/src/ppt_pro_max/: __main__.py
.claude/skills/ppt-design-skill/src/ppt_pro_max/adapters/: ui_ux_adapter.py
.claude/skills/ppt-design-skill/src/ppt_pro_max/decider/: design_decider.py
.claude/skills/ppt-design-skill/src/ppt_pro_max/enterprise/: block_renderer.py  component_renderer.py  image_matcher.py  pipeline.py
.claude/skills/ppt-design-skill/src/ppt_pro_max/renderer/: effects.py  elevation.py  image_fetcher.py  image_processor.py  layout_engine.py
.claude/skills/ppt-design-skill/src/ppt_pro_max/renderer/diagram/: data_splitter.py  diagram_style.py
.claude/skills/ppt-design-skill/tests/: conftest.py
component_library/: index.db
docs/: README_EN.md  blocks-layout-system-design.md  design-quality-upgrade-plan.md  enterprise_pipeline_replacement_v6.md  multi-canvas-findings.md  skill-md-compression-assessment.md  skill-md-revision-v2.md  usage-guide.md  (+3 more)
(+313 files in other folders)
